# leanclr

./: README.md  README_EN.md
src/runtime/: CMakeLists.txt  build_config.h  rt_base.h
src/runtime/alloc/: general_allocation.h  mem_pool.h
src/runtime/gc/: garbage_collector.cpp  garbage_collector.h
src/runtime/icalls/: icall_base.h  internal_call_stubs.cpp  internal_call_stubs.h  mono_runtimeclasshandle.cpp  mono_runtimegptrarrayhandle.cpp  mono_runtimemarshal.cpp  mono_safestringmarshal.cpp  system_appdomain.cpp  system_array.cpp  system_array.h  system_buffer.cpp  system_buffer.h  system_currentsystemtimezone.cpp  system_datetime.cpp  system_delegate.cpp  system_diagnostics_debugger.cpp  system_diagnostics_stackframe.cpp  system_diagnostics_stacktrace.cpp  system_environment.cpp  system_exception.cpp  system_gc.cpp  system_globalization_cultureinfo.cpp  system_object.cpp  system_reflection_assembly.cpp  system_reflection_assembly.h  system_reflection_assemblyname.cpp  system_reflection_customattributedata.cpp  system_reflection_eventinfo.cpp  system_reflection_methodbase.cpp  system_reflection_runtimeassembly.cpp  system_reflection_runtimeeventinfo.cpp  system_reflection_runtimemethodinfo.cpp  system_reflection_runtimemodule.cpp  system_reflection_runtimeparameterinfo.cpp  system_runtime_compilerservices_runtimehelpers.cpp  system_runtime_interopservices_gchandle.cpp  system_runtime_interopservices_marshal.cpp  system_runtime_interopservices_runtimeinformation.cpp  system_runtime_runtimeimports.cpp  system_runtimetype.cpp  (+13 more)
src/runtime/interp/: basic_block_splitter.h  hl_transformer.cpp  hl_transformer.h  il_opcodes.cpp  interp_defs.cpp  interp_defs.h  interpreter.cpp  interpreter.h  ll_opcodes.cpp  ll_opcodes.h  ll_transformer.cpp  ll_transformer.h  machine_state.cpp  machine_state.h
src/runtime/intrinsics/: intrinsic_stubs.h  system_array.cpp  system_array.h  system_numerics_vector.cpp  system_numerics_vector.h  (+12 more)
(+105 files in other folders)
